Colocando informações para gráfico do colaborador